--- a/pda_studio.html
+++ b/pda_studio.html
@@ -1,6 +1,9 @@
 <div class="app-container" id="pda-studio-container">
   <header class="header" style="background: linear-gradient(90deg, #667eea, #764ba2);">
     <h1>Pushdown Automata Studio</h1>
+    <button id="pdaPanelToggleBtn" class="panel-toggle-btn" style="margin-left: 10px;">
+        <i data-lucide="menu"></i>
+    </button>
     <div id="pdaStackHeader" style="margin-left: auto; background: rgba(255,255,255,0.2); padding: 5px 15px; border-radius: 8px; font-size: 0.9em;">
         Stack Top: <span id="currentStackTop" style="font-weight: bold;">Z</span>
     </div>
