--- a/tm_studio.html
+++ b/tm_studio.html
@@ -1,6 +1,9 @@
 <div class="app-container" id="tm-studio-container">
   <header class="header" style="background: linear-gradient(90deg, #10b981, #059669);">
     <h1>Turing Machine Studio</h1>
+    <button id="tmPanelToggleBtn" class="panel-toggle-btn" style="margin-left: 10px;">
+        <i data-lucide="menu"></i>
+    </button>
     <div id="tmTapeHeader" style="margin-left: auto; background: rgba(255,255,255,0.2); padding: 5px 15px; border-radius: 8px; font-size: 0.9em;">
         Tape Head: <span id="currentHeadPos" style="font-weight: bold;">0</span>
     </div>
