--- a/tm_studio.html
+++ b/tm_studio.html
@@ -244,11 +244,11 @@
     </div>
     
     <div class="zoom-controls" style="position: absolute; right: 30px; top: 150px; z-index: 50;">
-  <input id="tmZoomSlider" type="range" min="50" max="200" value="100" style="writing-mode: bt-lr; -webkit-appearance: slider-vertical; width: 8px; height: 100px; padding: 0 5px;" />
-  <button id="tmZoomResetBtn" class="toolbar-icon" title="Reset Zoom" type="button"><i data-lucide="refresh-ccw"></i></button>
-</div>
-  </section>
-  <div id="stepLog">TM simulation logs will appear here...</div>
+  <input id="tmZoomSlider" type="range" min="50" max="200" value="100" 
+         style="writing-mode: vertical-lr; direction: rtl; width: 12px; height: 100px; cursor: pointer;" />
+  <button id="tmZoomResetBtn" class="toolbar-icon" title="Reset Zoom" type="button">
+      <i data-lucide="refresh-ccw"></i>
+  </button>
 </div>
   </main>
 </div>
