--- a/pda_studio.html
+++ b/pda_studio.html
@@ -253,10 +253,13 @@
 <div class="zoom-controls" style="position: absolute; right: 20px; top: 100px; z-index: 50; display: flex; flex-direction: column; align-items: center; gap: 10px;">
   <div style="display:flex; flex-direction:column; align-items:center;">
     <span style="font-size:10px; color:var(--muted); font-weight: bold;">ZOOM</span>
-    <input id="pdaZoomSlider" type="range" min="50" max="200" value="100" style="writing-mode: bt-lr; -webkit-appearance: slider-vertical; width: 8px; height: 150px; padding: 0 5px;" />
+    <input id="pdaZoomSlider" type="range" min="50" max="200" value="100" 
+           style="writing-mode: vertical-lr; direction: rtl; width: 12px; height: 150px; cursor: pointer;" />
   </div>
 
-  <button id="pdaZoomResetBtn" class="toolbar-icon" title="Reset View"><i data-lucide="refresh-ccw"></i></button>
+  <button id="pdaZoomResetBtn" class="toolbar-icon" title="Reset View">
+      <i data-lucide="refresh-ccw"></i>
+  </button>
 </div>
 
 <div id="pdaExportPngModal" class="modal-overlay" style="display:none">
