--- a/tm_studio.html
+++ b/tm_studio.html
@@ -322,9 +322,9 @@
 <div id="tmSaveModal" class="modal-overlay" style="display:none">
     <div class="modal-box" style="width: 400px; border-top: 4px solid #10b981;">
         <h3 style="margin-top:0; color:#064e3b;"><i data-lucide="save"></i> Save TM Logic</h3>
-        <p style="font-size:0.85em; color:#64748b; margin-bottom:15px;">Configuration will be saved as a portable JSON file.</p>
-        <div class="modal-prop-row">
-            <input id="tmSaveNameInput" class="modal-input" placeholder="tm-logic-export" style="width:100%; border-left: 3px solid #10b981;">
+        <div class="modal-prop-row" style="display: flex; align-items: center; background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 6px; overflow: hidden; margin-top: 10px;">
+            <span style="padding: 8px 12px; background: #e2e8f0; color: #475569; font-weight: bold; border-right: 1px solid #cbd5e1; user-select: none;">tm_</span>
+            <input id="tmSaveNameInput" class="modal-input" placeholder="logic-name" style="border: none; flex: 1; padding: 8px; outline: none;">
         </div>
         <div class="modal-actions" style="margin-top:20px;">
             <button onclick="document.getElementById('tmSaveModal').style.display='none'">Cancel</button>
@@ -336,9 +336,9 @@
 <div id="tmExportPngModal" class="modal-overlay" style="display:none">
     <div class="modal-box" style="width: 400px; border-top: 4px solid #059669;">
         <h3 style="margin-top:0; color:#064e3b;"><i data-lucide="image"></i> Export Canvas PNG</h3>
-        <p style="font-size:0.85em; color:#64748b; margin-bottom:15px;">High-resolution snapshot for documentation.</p>
-        <div class="modal-prop-row">
-            <input id="tmPngNameInput" class="modal-input" placeholder="tm-visual-snapshot" style="width:100%; border-left: 3px solid #059669;">
+        <div class="modal-prop-row" style="display: flex; align-items: center; background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 6px; overflow: hidden; margin-top: 10px;">
+            <span style="padding: 8px 12px; background: #e2e8f0; color: #475569; font-weight: bold; border-right: 1px solid #cbd5e1; user-select: none;">tm_</span>
+            <input id="tmPngNameInput" class="modal-input" placeholder="visual-snapshot" style="border: none; flex: 1; padding: 8px; outline: none;">
         </div>
         <div class="modal-actions" style="margin-top:20px;">
             <button onclick="document.getElementById('tmExportPngModal').style.display='none'">Cancel</button>
