--- a/pda_studio.html
+++ b/pda_studio.html
@@ -382,7 +382,7 @@
         <h3 style="color:#312e81;"><i data-lucide="image"></i> Export Canvas PNG</h3>
         <div class="modal-prop-row" style="display: flex; align-items: center; background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 6px;">
             <span style="padding: 8px 12px; background: #e2e8f0; color: #475569; font-weight: bold; border-right: 1px solid #cbd5e1;">pda_</span>
-            <input id="pdaPngNameInput" class="modal-input" placeholder="visual-snapshot" style="border: none; flex: 1; padding: 8px; outline: none;">
+            <input id="pdaVisualFileNameInput" class="modal-input" placeholder="visual-snapshot" style="border: none; flex: 1; padding: 8px; outline: none;">
         </div>
         <div class="modal-actions" style="margin-top:20px;">
             <button onclick="document.getElementById('pdaExportPngModal').style.display='none'">Cancel</button>
