--- a/tm_studio.html
+++ b/tm_studio.html
@@ -22,6 +22,7 @@
                  <option value="MULTI_TAPE">Multi-Tape (k-Tape)</option>
                  <option value="STAY_OPTION">Stay-Option Variant</option>
                  <option value="NON_DET">Non-Deterministic (NTM)</option>
+                 <option value="LBA">Linear Bounded (LBA)</option>
                </select>
              </div>
              <div class="kv">
