--- a/tm_studio.html
+++ b/tm_studio.html
@@ -23,6 +23,9 @@
                  <option value="STAY_OPTION">Stay-Option Variant</option>
                  <option value="NON_DET">Non-Deterministic (NTM)</option>
                  <option value="LBA">Linear Bounded (LBA)</option>
+                 <option value="COPY_BLOCK">Block: Tape Copy</option>
+                 <option value="INCREMENT_BLOCK">Block: Binary Incrementer</option>
+                 <option value="PAL_CHECK_BLOCK">Block: Palindrome Check Skeleton</option>
                </select>
              </div>
              <div class="kv">
@@ -251,6 +254,9 @@
       <i data-lucide="refresh-ccw"></i>
   </button>
 </div>
+  </section>
+  <div id="stepLog">Simulation logs will appear here...</div>
+  </div>
   </main>
 </div>
 
